ui: table fixes, i18n adds, zfs: volume: ui/backend enhancements
